RESOLVED FIXED 125564
[WK2][SOUP] WebContext::allowSpecificHTTPSCertificateForHost does not work correctly when m_usesNetworkProcess is false
https://bugs.webkit.org/show_bug.cgi?id=125564
Summary [WK2][SOUP] WebContext::allowSpecificHTTPSCertificateForHost does not work co...
Kwang Yul Seo
Reported 2013-12-11 02:28:51 PST
WebContext::allowSpecificHTTPSCertificateForHost should send AllowSpecificHTTPSCertificateForHost to the web process when m_usesNetworkProcess is false. Also we shouldn't guard WebProcess::allowSpecificHTTPSCertificateForHost with !ENABLE(NETWORK_PROCESS) because we need this method when m_usesNetworkProcess is false.
Attachments
Patch (4.25 KB, patch)
2013-12-11 02:30 PST, Kwang Yul Seo
cgarcia: review+
cgarcia: commit-queue-
Patch for landing (3.64 KB, patch)
2013-12-22 02:38 PST, Carlos Garcia Campos
no flags
Kwang Yul Seo
Comment 1 2013-12-11 02:30:33 PST
Carlos Garcia Campos
Comment 2 2013-12-22 02:32:16 PST
Right, SSL errors are broken when building with network process but not using it. $ Programs/WebKit2APITests/TestSSL /webkit2/WebKitWebView/ssl: OK /webkit2/WebKitWebView/insecure-content: OK /webkit2/WebKitWebView/tls-errors-policy: OK /webkit2/WebKitWebView/load-failed-with-tls-errors: ** ERROR:../../Source/WebKit2/UIProcess/API/gtk/tests/TestSSL.cpp:210:void testLoadFailedWithTLSErrors(TLSErrorsTest*, gconstpointer): assertion failed (test->m_loadEvents[1] == LoadTrackingTest::LoadCommitted): (4 == 3) $ WEBKIT_USE_NETWORK_PROCESS=1 jrun Programs/WebKit2APITests/TestSSL /webkit2/WebKitWebView/ssl: OK /webkit2/WebKitWebView/insecure-content: OK /webkit2/WebKitWebView/tls-errors-policy: OK /webkit2/WebKitWebView/load-failed-with-tls-errors: OK
Carlos Garcia Campos
Comment 3 2013-12-22 02:34:19 PST
Comment on attachment 218944 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=218944&action=review Thanks! > Source/WebKit2/WebProcess/WebProcess.h:60 > -#if !ENABLE(NETWORK_PROCESS) && USE(SOUP) > +#if USE(SOUP) > class CertificateInfo; > #endif This change is no longer required, and probably the reason why the patch didn't apply.
Carlos Garcia Campos
Comment 4 2013-12-22 02:38:45 PST
Created attachment 219868 [details] Patch for landing
WebKit Commit Bot
Comment 5 2013-12-22 22:17:33 PST
Comment on attachment 219868 [details] Patch for landing Clearing flags on attachment: 219868 Committed r160986: <http://trac.webkit.org/changeset/160986>
WebKit Commit Bot
Comment 6 2013-12-22 22:17:38 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.